--- a/parity.yml
+++ b/parity.yml
@@ -46,6 +46,13 @@ data:
     tracing = "off"
     [ui]
     disable = true
+    [rpc]
+    disable = false
+    port = 8545
+    interface = "all"
+    cors = []
+    apis = ["web3", "eth", "pubsub", "net", "parity", "parity_pubsub", "traces", "rpc", "shh", "shh_pubsub"]
+    hosts = ["none"]
 ---
 apiVersion: extensions/v1beta1
 kind: Deployment
